--- a/app/src/main/res/layout/theme_select_fragment.xml
+++ b/app/src/main/res/layout/theme_select_fragment.xml
@@ -3,54 +3,84 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:orientation="horizontal"
+
+    android:orientation="vertical"
     android:paddingLeft="@dimen/theme_padding"
     android:paddingRight="@dimen/theme_padding" >
-
-    <RelativeLayout
-        android:id="@+id/theme_animals_container"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="@dimen/theme_margin"
-        android:layout_weight="1" >
+        android:gravity="center"
+        android:orientation="horizontal">
+        <RelativeLayout
+            android:id="@+id/theme_animals_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/theme_margin"
+            android:layout_weight="1" >
 
-        <ImageView
-            android:id="@+id/theme_animals"
+            <ImageView
+                android:id="@+id/theme_animals"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@drawable/animals_theme_star_0" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/theme_monsters_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/theme_margin"
+            android:layout_weight="1">
+
+            <ImageView
+                android:id="@+id/theme_monsters"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@drawable/monsters_theme_star_0" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/theme_emoji_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/theme_margin"
+            android:layout_weight="1" >
+
+            <ImageView
+                android:id="@+id/theme_emoji"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@drawable/emoji_theme_star_0" />
+        </RelativeLayout>
+
+
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_weight="0"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
+        <RelativeLayout
+            android:id="@+id/theme_flag_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:src="@drawable/animals_theme_star_0" />
+            android:layout_marginLeft="@dimen/theme_margin"
+            android:layout_weight="4" >
 
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/theme_monsters_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/theme_margin"
-        android:layout_weight="1">
-
-        <ImageView
-            android:id="@+id/theme_monsters"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:adjustViewBounds="true"
-            android:src="@drawable/monsters_theme_star_0" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/theme_emoji_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/theme_margin"
-        android:layout_weight="1" >
-
-        <ImageView
-            android:id="@+id/theme_emoji"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:adjustViewBounds="true"
-            android:src="@drawable/emoji_theme_star_0" />
-    </RelativeLayout>
-
+            <ImageView
+                android:id="@+id/theme_flag"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@drawable/flags_theme_star_0"/>
+        </RelativeLayout>
+        </LinearLayout>
 </LinearLayout>
