--- a/app/src/main/res/layout/menu_fragment.xml
+++ b/app/src/main/res/layout/menu_fragment.xml
@@ -29,23 +29,23 @@
         android:id="@+id/settings_game_button"
         android:layout_width="@dimen/settings_game_button"
         android:layout_height="@dimen/settings_game_button"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="@dimen/settings_game_button_margin"
-        android:layout_toRightOf="@id/start_game_button"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
-        android:src="@drawable/button_settings" />
+        android:src="@drawable/button_settings"
+        android:layout_alignTop="@+id/start_game_button"
+        android:layout_toRightOf="@+id/start_game_button_lights"
+        android:layout_toEndOf="@+id/start_game_button_lights" />
 
     <ImageView
         android:id="@+id/google_play_button"
         android:layout_width="@dimen/settings_game_button"
         android:layout_height="@dimen/settings_game_button"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="@dimen/settings_game_button_margin"
-        android:layout_toLeftOf="@id/start_game_button"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
-        android:src="@drawable/button_google_play" />
+        android:src="@drawable/button_google_play"
+        android:layout_alignTop="@+id/settings_game_button"
+        android:layout_toLeftOf="@+id/start_game_button_lights"
+        android:layout_toStartOf="@+id/start_game_button_lights" />
 
 	<ImageView
         android:id="@+id/title"
@@ -56,7 +56,7 @@
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
         android:src="@drawable/title" />
-	
+
 	<ImageView
         android:id="@+id/tooltip"
         android:layout_width="@dimen/tooltip_width"
