--- a/app/src/main/res/layout/second8.xml
+++ b/app/src/main/res/layout/second8.xml
@@ -45,34 +45,12 @@
         </RelativeLayout>
 
         <RelativeLayout
-            android:id="@+id/theme_add_container"
+            android:id="@+id/theme_commerce_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/theme_margin"
             android:layout_weight="3" >
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                >
-                <com.google.android.gms.ads.NativeExpressAdView
-                    android:id="@+id/adView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    ads:adUnitId="ca-app-pub-3940256099942544/2177258514"
-
-                    ads:adSize="280x100">
-                </com.google.android.gms.ads.NativeExpressAdView>
-
-            </LinearLayout>
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/theme_commerce_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/theme_margin"
             android:layout_weight="3" >
 
             <ImageView
@@ -83,6 +61,23 @@
                 android:src="@drawable/commerce_theme_star_0" />
         </RelativeLayout>
 
+
+
+        <RelativeLayout
+            android:id="@+id/theme_comp_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/theme_margin"
+            android:layout_weight="3" >
+
+            <ImageView
+                android:id="@+id/theme_comp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@drawable/comp_theme_star_0" />
+        </RelativeLayout>
+
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -90,64 +85,64 @@
         android:gravity="center"
         android:orientation="horizontal">
         <RelativeLayout
-            android:id="@+id/theme_flag_container"
+            android:id="@+id/theme_construct_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/theme_margin"
             android:layout_weight="3" >
 
             <ImageView
-                android:id="@+id/theme_flag"
+                android:id="@+id/theme_construct"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                android:src="@drawable/flag_theme_star_0" />
+                android:src="@drawable/construct_theme_star_0" />
 
         </RelativeLayout>
 
         <RelativeLayout
-            android:id="@+id/theme_food_container"
+            android:id="@+id/theme_edu_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/theme_margin"
             android:layout_weight="3">
 
             <ImageView
-                android:id="@+id/theme_food"
+                android:id="@+id/theme_edu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                android:src="@drawable/food_theme_star_0" />
+                android:src="@drawable/edu_theme_star_0" />
         </RelativeLayout>
 
         <RelativeLayout
-            android:id="@+id/theme_veg_container"
+            android:id="@+id/theme_elec_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/theme_margin"
             android:layout_weight="3" >
 
             <ImageView
-                android:id="@+id/theme_veg"
+                android:id="@+id/theme_elec"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                android:src="@drawable/veg_theme_star_0" />
+                android:src="@drawable/elec_theme_star_0" />
         </RelativeLayout>
 
         <RelativeLayout
-            android:id="@+id/theme_fruits_container"
+            android:id="@+id/theme_entertain_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/theme_margin"
             android:layout_weight="3" >
 
             <ImageView
-                android:id="@+id/theme_fruits"
+                android:id="@+id/theme_entertain"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                android:src="@drawable/fruits_theme_star_0" />
+                android:src="@drawable/entertain_theme_star_0" />
         </RelativeLayout>
 
 
