--- a/app/src/main/res/layout/popup_unlock_view.xml
+++ b/app/src/main/res/layout/popup_unlock_view.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:gravity="left|top" 
     android:paddingTop="@dimen/popup_settings_padding_top"
-    android:paddingLeft="@dimen/popup_settings_padding_left">
+    android:paddingLeft="@dimen/popup_settings_padding_left"
+    android:paddingRight="@dimen/popup_settings_padding_right">
 
     <LinearLayout
         android:id="@+id/sound_off"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="left|center_vertical"
-        android:orientation="horizontal" 
+
+        android:layout_gravity="center"
+        android:orientation="horizontal"
         android:layout_marginLeft="5dp">
 
         <ImageView
@@ -23,52 +24,68 @@
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
             android:src="@drawable/level_complete_star" />
-
-        <TextView
-            android:id="@+id/sound_off_text"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/popup_settings_sound_image_size"
-            android:layout_marginLeft="10dp"
-            android:gravity="left|center_vertical"
-            android:shadowColor="#2eaed9"
-            android:shadowDx="4"
-            android:shadowDy="4"
-            android:shadowRadius="4"
-            android:text="Complete Previous game Atleat with 2 starts"
-            android:textColor="#FFFFFF"
-            android:textSize="@dimen/popup_settings_sound_text_size" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/rate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="left|center_vertical"
-        android:orientation="horizontal"
-        android:layout_marginTop="5dp" 
-        android:layout_marginLeft="0dp">
-
-       <!-- <ImageView
+        <Space
+            android:layout_width="50dp"
+            android:layout_height="wrap_content" />
+        <ImageView
+            android:id="@+id/sound_image1"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/popup_settings_sound_image_size"
-            android:layout_marginLeft="5dp"
+
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
-            android:src="@drawable/unlock" />-->
+            android:src="@drawable/level_complete_star" />
+        </LinearLayout>
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="50dp" />
+    <TextView
+        android:id="@+id/sound_off_text"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="10dp"
+        android:gravity="center"
+        android:shadowColor="#2eaed9"
+        android:shadowDx="4"
+        android:shadowDy="4"
+        android:shadowRadius="4"
+        android:text="Complete previous game At least with 2 starts"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="@dimen/popup_settings_sound_text_size"
+        android:textStyle="bold" />
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="15dp" />
+    <TextView
+        android:id="@+id/sound_off_text1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="10dp"
+        android:gravity="center"
+        android:shadowColor="#2eaed9"
+        android:shadowDx="4"
+        android:shadowDy="4"
+        android:shadowRadius="4"
+        android:text="(or)"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="@dimen/popup_settings_sound_text_size"
+        android:textStyle="bold" />
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="15dp" />
 
-        <TextView
-            android:id="@+id/rate_text"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/popup_settings_sound_image_size"
-            android:layout_marginLeft="8dp"
-            android:gravity="left|center_vertical"
-            android:shadowColor="#2eaed9"
-            android:shadowDx="4"
-            android:shadowDy="4"
-            android:shadowRadius="4"
-            android:text="Otherwise click here to unlock"
-            android:textColor="#FFFFFF"
-            android:textSize="@dimen/popup_settings_sound_text_size" />
+
+
+      <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="250dp"
+            android:layout_gravity="center"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/unlock" />
+
+
     </LinearLayout>
 
-</LinearLayout>
