--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -61,4 +61,5 @@
     <dimen name="popup_settings_sound_text_size">20dp</dimen>
     <dimen name="popup_settings_padding_top">55dp</dimen>
     <dimen name="popup_settings_padding_left">20dp</dimen>
+    <dimen name="popup_settings_padding_right">20dp</dimen>
 </resources>
