--- a/app/src/main/res/layout/popup_unlock_view.xml
+++ b/app/src/main/res/layout/popup_unlock_view.xml
@@ -39,9 +39,13 @@
         android:layout_width="match_parent"
         android:layout_height="35dp" />
 
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
     <TextView
         android:id="@+id/sound_off_text"
-        android:layout_width="match_parent"
+        android:layout_width="100dp"
         android:layout_height="match_parent"
         android:fontFamily="sans-serif-condensed"
         android:gravity="center"
@@ -56,7 +60,7 @@
         android:textStyle="bold"
         android:typeface="monospace" />
     <Space
-        android:layout_width="match_parent"
+        android:layout_width="15dp"
         android:layout_height="15dp" />
 
     <TextView
@@ -77,19 +81,19 @@
         android:textStyle="bold"
         android:typeface="monospace" />
     <Space
-        android:layout_width="match_parent"
-        android:layout_height="15dp" />
+        android:layout_width="15dp"
+        android:layout_height="wrap_content" />
 
 
 
       <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="250dp"
+            android:layout_height="175dp"
             android:layout_gravity="center"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
             android:src="@drawable/unlock" />
-
+</LinearLayout>
 
     </LinearLayout>
 
