--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -62,4 +62,14 @@
     <dimen name="popup_settings_padding_top">55dp</dimen>
     <dimen name="popup_settings_padding_left">20dp</dimen>
     <dimen name="popup_settings_padding_right">20dp</dimen>
+
+    <!-- unlock popup -->
+    <dimen name="popup_unlock_width">400dp</dimen>
+    <dimen name="popup_unlock_height">300dp</dimen>
+    <dimen name="popup_unlock_sound_image_size">40dp</dimen>
+    <dimen name="popup_unlock_sound_text_size">20dp</dimen>
+    <dimen name="popup_unlock_padding_top">55dp</dimen>
+    <dimen name="popup_unlock_padding_left">20dp</dimen>
+    <dimen name="popup_unlock_padding_right">20dp</dimen>
+
 </resources>
