--- a/app/src/main/res/layout/popup_unlock_view.xml
+++ b/app/src/main/res/layout/popup_unlock_view.xml
@@ -1,12 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingTop="@dimen/popup_settings_padding_top"
-    android:paddingLeft="@dimen/popup_settings_padding_left"
-    android:paddingRight="@dimen/popup_settings_padding_right">
-
+    android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="vertical"
+        android:layout_marginTop="45dp"
+        >
+        <TextView
+            android:id="@+id/sound_off_text"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:fontFamily="sans-serif-condensed"
+            android:layout_gravity="center"
+            android:layout_margin="03dp"
+            android:gravity="center"
+            android:shadowColor="#2eaed9"
+            android:shadowDx="4"
+            android:shadowDy="4"
+            android:shadowRadius="4"
+            android:text="Complete previous game at least with"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textSize="23sp"
+            android:textStyle="bold"
+            android:typeface="monospace" />
+        </LinearLayout>
     <LinearLayout
         android:id="@+id/sound_off"
         android:layout_width="wrap_content"
@@ -18,46 +43,37 @@
         <ImageView
             android:id="@+id/sound_image"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/popup_settings_sound_image_size"
+            android:layout_height="45dp"
 
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
             android:src="@drawable/level_complete_star" />
+        <Space
+            android:layout_width="25dp"
+            android:layout_height="wrap_content" />
+
          <ImageView
             android:id="@+id/sound_image1"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/popup_settings_sound_image_size"
+            android:layout_height="45dp"
 
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
             android:src="@drawable/level_complete_star" />
-        </LinearLayout>
 
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:orientation="vertical">
-    <TextView
-        android:id="@+id/sound_off_text"
+      </LinearLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:fontFamily="sans-serif-condensed"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="10dp"
-        android:gravity="center"
-        android:shadowColor="#2eaed9"
-        android:shadowDx="4"
-        android:shadowDy="4"
-        android:shadowRadius="4"
-        android:text="Complete previous game At least with 2 starts"
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textSize="23sp"
-        android:textStyle="bold"
-        android:typeface="monospace" />
+        android:orientation="vertical"
 
+        >
 
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="15dp" />
     <TextView
         android:id="@+id/sound_off_text1"
         android:layout_width="match_parent"
@@ -76,27 +92,23 @@
         android:textStyle="bold"
         android:typeface="monospace" />
 
-
-
-
-
     <Button
         android:id="@+id/adButton"
 
-        android:text="Watch Ad to unLock"
+        android:text="Watch Ad to UnLock"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:layout_gravity="center"
         android:layout_margin="10dp"
         android:layout_width="200dp"
-        android:layout_height="60dp"
+        android:layout_height="40dp"
         android:background="@drawable/buttonshape"
         android:shadowColor="#E6E6E6"
         android:shadowDx="0"
         android:shadowDy="0"
         android:shadowRadius="20"
         />
-</LinearLayout>
-
     </LinearLayout>
+</LinearLayout>
+</RelativeLayout>
 
